--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.0.16",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -25,9 +26,11 @@
     "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
     "@vue/test-utils": "^1.0.0-beta.16",
+    "axios": "^0.18.0",
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-vuetify": "^0.1.4",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
