--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.16",
+    "vue-scrollto": "^2.11.0",
+    "vue-timeago": "^4.0.1",
+    "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
